crop_data #60 - Feat center crop 224

--- a/data/crop_data.ipynb
+++ b/data/crop_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,14 +96,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sample PNG paths: ['ID368_image1665450178483.png', 'ID013_image1661216788592.png', 'ID113_image1661908013121.png', 'ID097_image1661823399448.png', 'ID384_image1665536548947.png']\n"
+      "Sample PNG paths: ['ID031_image1661317391266.png', 'ID031_image1661317417826.png', 'ID109_image1661907643003.png', 'ID437_image1666060713139.png', 'ID468_image1666659890125.png']\n"
      ]
     }
    ],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "640"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "640"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,6 +273,7 @@
     "annos_dir = os.path.join(fold_dir, 'annos')\n",
     "os.makedirs(annos_dir, exist_ok=True)\n",
     "\n",
+    "crop_size = (224, 224)  # (height, width)\n",
     "\n",
     "for i in range(len(train_dataset)):\n",
     "    image, label, image_path, label_path = train_dataset[i]\n",
@@ -284,10 +285,38 @@
     "        x_min, y_min = coords.min(axis=0)  \n",
     "        x_max, y_max = coords.max(axis=0)  \n",
     "\n",
-    "        cropped_image = image[x_min-10:x_max+10,y_min-10:y_max+10]\n",
-    "        cropped_mask = label[x_min-10:x_max+10,y_min-10:y_max+10,k]\n",
     "\n",
-    "        \n",
+    "        if abs(x_max - x_min) > crop_size[0] or abs(y_max - y_min) > crop_size[1]:\n",
+    "            print(abs(x_max - x_min))\n",
+    "            print(abs(y_max - y_min))\n",
+    "            print('????')\n",
+    "\n",
+    "\n",
+    "        center_x = (x_min + x_max) // 2\n",
+    "        center_y = (y_min + y_max) // 2\n",
+    "\n",
+    "        half_h = crop_size[0] // 2\n",
+    "        half_w = crop_size[1] // 2\n",
+    "\n",
+    "        # cropped_image = image[x_min-10:x_max+10,y_min-10:y_max+10]\n",
+    "        # cropped_mask = label[x_min-10:x_max+10,y_min-10:y_max+10,k]\n",
+    "\n",
+    "        start_x = max(center_x - half_h, 0)\n",
+    "        start_y = max(center_y - half_w, 0)\n",
+    "        end_x = start_x + crop_size[0]\n",
+    "        end_y = start_y + crop_size[1]\n",
+    "\n",
+    "        if end_x > image.shape[0]:\n",
+    "            start_x = image.shape[0] - crop_size[0]\n",
+    "            end_x = image.shape[0]\n",
+    "\n",
+    "        if end_y > image.shape[1]:\n",
+    "            start_y = image.shape[1] - crop_size[1]\n",
+    "            end_y = image.shape[1]\n",
+    "\n",
+    "        cropped_image = image[start_x:end_x, start_y:end_y]\n",
+    "        cropped_mask = label[start_x:end_x, start_y:end_y, k]\n",
+    "\n",
     "        output_image_path = os.path.join(image_dir,str(k)+'_'+image_path.split('/')[-1])\n",
     "\n",
     "    # break \n",
@@ -302,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +350,7 @@
        "160"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +376,7 @@
        "160"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +478,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "160"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,6 +520,8 @@
     "annos_dir = os.path.join(fold_dir, 'annos')\n",
     "os.makedirs(annos_dir, exist_ok=True)\n",
     "\n",
+    "crop_size = (224, 224)  # (height, width)\n",
+    "\n",
     "\n",
     "for i in range(len(train_dataset)):\n",
     "    image, label, image_path, label_path = train_dataset[i]\n",
@@ -482,8 +533,37 @@
     "        x_min, y_min = coords.min(axis=0)  \n",
     "        x_max, y_max = coords.max(axis=0)  \n",
     "\n",
-    "        cropped_image = image[x_min-10:x_max+10,y_min-10:y_max+10]\n",
-    "        cropped_mask = label[x_min-10:x_max+10,y_min-10:y_max+10,k]\n",
+    "\n",
+    "        if abs(x_max - x_min) > crop_size[0] or abs(y_max - y_min) > crop_size[1]:\n",
+    "            print(abs(x_max - x_min))\n",
+    "            print(abs(y_max - y_min))\n",
+    "            print('????')\n",
+    "\n",
+    "\n",
+    "        center_x = (x_min + x_max) // 2\n",
+    "        center_y = (y_min + y_max) // 2\n",
+    "\n",
+    "        half_h = crop_size[0] // 2\n",
+    "        half_w = crop_size[1] // 2\n",
+    "\n",
+    "        # cropped_image = image[x_min-10:x_max+10,y_min-10:y_max+10]\n",
+    "        # cropped_mask = label[x_min-10:x_max+10,y_min-10:y_max+10,k]\n",
+    "\n",
+    "        start_x = max(center_x - half_h, 0)\n",
+    "        start_y = max(center_y - half_w, 0)\n",
+    "        end_x = start_x + crop_size[0]\n",
+    "        end_y = start_y + crop_size[1]\n",
+    "\n",
+    "        if end_x > image.shape[0]:\n",
+    "            start_x = image.shape[0] - crop_size[0]\n",
+    "            end_x = image.shape[0]\n",
+    "\n",
+    "        if end_y > image.shape[1]:\n",
+    "            start_y = image.shape[1] - crop_size[1]\n",
+    "            end_y = image.shape[1]\n",
+    "\n",
+    "        cropped_image = image[start_x:end_x, start_y:end_y]\n",
+    "        cropped_mask = label[start_x:end_x, start_y:end_y, k]\n",
     "\n",
     "        \n",
     "        output_image_path = os.path.join(image_dir,str(k)+'_'+image_path.split('/')[-1])\n",
