--- a/data/crop_data.ipynb
+++ b/data/crop_data.ipynb
@@ -103,7 +103,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sample PNG paths: ['ID031_image1661317391266.png', 'ID031_image1661317417826.png', 'ID109_image1661907643003.png', 'ID437_image1666060713139.png', 'ID468_image1666659890125.png']\n"
+      "Sample PNG paths: ['ID356_image1664934337502.png', 'ID487_image1666661971614.png', 'ID122_image1661909071872.png', 'ID470_image1666660072297.png', 'ID366_image1665125285549.png']\n"
      ]
     }
    ],
@@ -255,12 +255,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SAVE_ROOT = './crop_train'"
+    "SAVE_ROOT = './crop_train_Trapezoid'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tqdm import tqdm "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,10 +284,10 @@
     "\n",
     "crop_size = (224, 224)  # (height, width)\n",
     "\n",
-    "for i in range(len(train_dataset)):\n",
+    "for i in tqdm(range(len(train_dataset))):\n",
     "    image, label, image_path, label_path = train_dataset[i]\n",
     "\n",
-    "    for k in [CLASS2IND['Trapezoid'],CLASS2IND['Pisiform']]:\n",
+    "    for k in [CLASS2IND['Trapezoid']]: # ,CLASS2IND['Pisiform']\n",
     "\n",
     "        coords = np.column_stack(np.where(label[:,:,k] > 0))\n",
     "\n",
@@ -331,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +359,7 @@
        "160"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +385,7 @@
        "160"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +496,7 @@
        "160"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,18 +507,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "SAVE_ROOT = './crop_val'"
+    "SAVE_ROOT = './crop_val_Trapezoid'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 160/160 [01:40<00:00,  1.59it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "fold_dir = os.path.join(SAVE_ROOT)\n",
     "os.makedirs(fold_dir, exist_ok=True)\n",
@@ -523,10 +540,10 @@
     "crop_size = (224, 224)  # (height, width)\n",
     "\n",
     "\n",
-    "for i in range(len(train_dataset)):\n",
+    "for i in tqdm(range(len(train_dataset))):\n",
     "    image, label, image_path, label_path = train_dataset[i]\n",
     "\n",
-    "    for k in [CLASS2IND['Trapezoid'],CLASS2IND['Pisiform']]:\n",
+    "    for k in [CLASS2IND['Trapezoid']]: # ,CLASS2IND['Pisiform']\n",
     "\n",
     "        coords = np.column_stack(np.where(label[:,:,k] > 0))\n",
     "\n",
@@ -577,6 +594,13 @@
     "\n",
     "        cv2.imwrite(output_label_path, cropped_mask)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
