feat #60 crop data done

--- a/data/crop_data.ipynb
+++ b/data/crop_data.ipynb
@@ -60,6 +60,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "IMAGE_ROOT = \"/data/ephemeral/home/level2-cv-semanticsegmentation-cv-06-lv3/data/fold_all/images\"\n",
+    "LABEL_ROOT = \"/data/ephemeral/home/level2-cv-semanticsegmentation-cv-06-lv3/data/fold_all/annos\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "CLASSES = [\n",
     "    'finger-1', 'finger-2', 'finger-3', 'finger-4', 'finger-5',\n",
     "    'finger-6', 'finger-7', 'finger-8', 'finger-9', 'finger-10',\n",
@@ -72,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,14 +106,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sample PNG paths: ['ID356_image1664934337502.png', 'ID487_image1666661971614.png', 'ID122_image1661909071872.png', 'ID470_image1666660072297.png', 'ID366_image1665125285549.png']\n"
+      "Sample PNG paths: ['ID513_image1666748180196.png', 'ID076_image1661736967350.png', 'ID486_image1666661865362.png', 'ID012_image1661147072358.png', 'ID105_image1661824735289.png']\n"
      ]
     }
    ],
@@ -113,16 +123,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "640"
+       "800"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,16 +157,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "640"
+       "800"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,16 +261,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "SAVE_ROOT = './crop_train_Trapezoid'"
+    "SAVE_ROOT = './crop_all_Trapezoid'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,9 +279,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 800/800 [09:34<00:00,  1.39it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "fold_dir = os.path.join(SAVE_ROOT)\n",
     "os.makedirs(fold_dir, exist_ok=True)\n",
@@ -340,38 +358,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "IMAGE_ROOT = \"/data/ephemeral/home/level2-cv-semanticsegmentation-cv-06-lv3/data/fold_1/images\"\n",
     "LABEL_ROOT = \"/data/ephemeral/home/level2-cv-semanticsegmentation-cv-06-lv3/data/fold_1/annos\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "160"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pngs = {\n",
-    "    os.path.relpath(os.path.join(root, fname), start=IMAGE_ROOT)\n",
-    "    for root, _dirs, files in os.walk(IMAGE_ROOT)\n",
-    "    for fname in files\n",
-    "    if os.path.splitext(fname)[1].lower() == \".png\"\n",
-    "}\n",
-    "len(pngs)"
    ]
   },
   {
@@ -391,6 +383,32 @@
     }
    ],
    "source": [
+    "pngs = {\n",
+    "    os.path.relpath(os.path.join(root, fname), start=IMAGE_ROOT)\n",
+    "    for root, _dirs, files in os.walk(IMAGE_ROOT)\n",
+    "    for fname in files\n",
+    "    if os.path.splitext(fname)[1].lower() == \".png\"\n",
+    "}\n",
+    "len(pngs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "160"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "jsons = {\n",
     "    os.path.relpath(os.path.join(root, fname), start=LABEL_ROOT)\n",
     "    for root, _dirs, files in os.walk(LABEL_ROOT)\n",
@@ -403,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +514,7 @@
        "160"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,14 +534,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 160/160 [01:40<00:00,  1.59it/s]\n"
+      "100%|██████████| 160/160 [01:55<00:00,  1.39it/s]\n"
      ]
     }
    ],
