Feat #60 crop test done

--- a/data/crop_data.ipynb
+++ b/data/crop_data.ipynb
@@ -50,8 +50,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IMAGE_ROOT = \"/data/ephemeral/home/level2-cv-semanticsegmentation-cv-06-lv3/data/fold_0/images\"\n",
-    "LABEL_ROOT = \"/data/ephemeral/home/level2-cv-semanticsegmentation-cv-06-lv3/data/fold_0/annos\""
+    "# IMAGE_ROOT = \"/data/ephemeral/home/level2-cv-semanticsegmentation-cv-06-lv3/data/fold_0/images\"\n",
+    "# LABEL_ROOT = \"/data/ephemeral/home/level2-cv-semanticsegmentation-cv-06-lv3/data/fold_0/annos\""
    ]
   },
   {
@@ -113,7 +113,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sample PNG paths: ['ID513_image1666748180196.png', 'ID076_image1661736967350.png', 'ID486_image1666661865362.png', 'ID012_image1661147072358.png', 'ID105_image1661824735289.png']\n"
+      "Sample PNG paths: ['ID487_image1666661971614.png', 'ID122_image1661909071872.png', 'ID525_image1667179061405.png', 'ID415_image1666055128809.png', 'ID530_image1667264279084.png']\n"
      ]
     }
    ],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,11 +270,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tqdm import tqdm "
+    "SAVE_ROOT = './crop_all_Pisiform'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SAVE_ROOT = './crop_train_Pisiform'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SAVE_ROOT = './crop_train_Hamate'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SAVE_ROOT = './crop_all_Hamate'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Trapezium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SAVE_ROOT = './crop_train_Triquetrum'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SAVE_ROOT = './crop_all_Triquetrum'"
    ]
   },
   {
@@ -283,10 +337,39 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CLASS2IND['Triquetrum']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tqdm import tqdm "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 800/800 [09:34<00:00,  1.39it/s]\n"
+      "100%|██████████| 800/800 [08:53<00:00,  1.50it/s]\n"
      ]
     }
    ],
@@ -305,7 +388,9 @@
     "for i in tqdm(range(len(train_dataset))):\n",
     "    image, label, image_path, label_path = train_dataset[i]\n",
     "\n",
-    "    for k in [CLASS2IND['Trapezoid']]: # ,CLASS2IND['Pisiform']\n",
+    "    # for k in [CLASS2IND['Trapezoid']]: # ,CLASS2IND['Pisiform']\n",
+    "    # for k in [CLASS2IND['Pisiform']]: # ,CLASS2IND['Pisiform']Scaphoid\\\n",
+    "    for k in [CLASS2IND['Triquetrum']]: # ,CLASS2IND['Pisiform']Scaphoid\n",
     "\n",
     "        coords = np.column_stack(np.where(label[:,:,k] > 0))\n",
     "\n",
@@ -358,38 +443,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "IMAGE_ROOT = \"/data/ephemeral/home/level2-cv-semanticsegmentation-cv-06-lv3/data/fold_1/images\"\n",
     "LABEL_ROOT = \"/data/ephemeral/home/level2-cv-semanticsegmentation-cv-06-lv3/data/fold_1/annos\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "160"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pngs = {\n",
-    "    os.path.relpath(os.path.join(root, fname), start=IMAGE_ROOT)\n",
-    "    for root, _dirs, files in os.walk(IMAGE_ROOT)\n",
-    "    for fname in files\n",
-    "    if os.path.splitext(fname)[1].lower() == \".png\"\n",
-    "}\n",
-    "len(pngs)"
    ]
   },
   {
@@ -409,6 +468,32 @@
     }
    ],
    "source": [
+    "pngs = {\n",
+    "    os.path.relpath(os.path.join(root, fname), start=IMAGE_ROOT)\n",
+    "    for root, _dirs, files in os.walk(IMAGE_ROOT)\n",
+    "    for fname in files\n",
+    "    if os.path.splitext(fname)[1].lower() == \".png\"\n",
+    "}\n",
+    "len(pngs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "160"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "jsons = {\n",
     "    os.path.relpath(os.path.join(root, fname), start=LABEL_ROOT)\n",
     "    for root, _dirs, files in os.walk(LABEL_ROOT)\n",
@@ -421,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +599,7 @@
        "160"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,14 +619,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SAVE_ROOT = './crop_val_Pisiform'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SAVE_ROOT = './crop_val_Scaphoid'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SAVE_ROOT = './crop_val_Hamate'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SAVE_ROOT = './crop_val_Triquetrum' "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 160/160 [01:55<00:00,  1.39it/s]\n"
+      "100%|██████████| 160/160 [01:46<00:00,  1.50it/s]\n"
      ]
     }
    ],
@@ -561,7 +689,9 @@
     "for i in tqdm(range(len(train_dataset))):\n",
     "    image, label, image_path, label_path = train_dataset[i]\n",
     "\n",
-    "    for k in [CLASS2IND['Trapezoid']]: # ,CLASS2IND['Pisiform']\n",
+    "    # for k in [CLASS2IND['Trapezoid']]: # ,CLASS2IND['Pisiform']\n",
+    "    # for k in [CLASS2IND['Pisiform']]: # ,CLASS2IND['Pisiform']Scaphoid\n",
+    "    for k in [CLASS2IND['Triquetrum']]: # ,CLASS2IND['Pisiform']Scaphoid\n",
     "\n",
     "        coords = np.column_stack(np.where(label[:,:,k] > 0))\n",
     "\n",
